<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="listener"
            type="org.triniti.greensmart.ui.home.complete.Complete" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/assistant"
            android:text="@string/before_you_start"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="12dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/assistant"
            android:gravity="start"
            android:textSize="18sp"
            android:text="@string/cardid_prompt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:paddingBottom="10dp"
            android:layout_marginTop="8dp"
            android:id="@+id/tilCard"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/tvInfo"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/etCard"
                android:inputType="number"
                android:fontFamily="@font/assistant"
                android:hint="@string/enter_card_id"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/done"
            android:layout_marginTop="12dp"
            app:iconSize="12dp"
            app:iconGravity="end"
            android:id="@+id/butDone"
            app:icon="@drawable/vector_tick"
            android:textColor="@android:color/holo_blue_light"
            app:layout_constraintTop_toBottomOf="@id/tilCard"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_height="wrap_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
