<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clPoints"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintHeight_percent=".7"
        app:layout_constraintTop_toTopOf="parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/ivMarket"
            android:layout_width="65dp"
            android:layout_height="65dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_colorFilter="@android:color/white"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/basket" />

        <com.github.abdularis.civ.CircleImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:padding="16dp"
            android:id="@+id/aivLoyalty"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".13"
            app:strokeColor="@android:color/white"
            app:strokeWidth="2dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvUsed"
            android:textSize="18sp"
            android:text="@string/used"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/used_grey"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".45"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvUnused"
            android:textColor="@color/colorPrimaryLogin"
            android:text="@string/unused"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat"
            app:layout_constraintVertical_bias=".75"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias=".9"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:id="@+id/tvLevel"
            android:text="@string/level"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".1"
            android:textColor="@color/colorPrimaryLogin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".75"
            android:fontFamily="@font/montserrat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:id="@+id/tvVal1"
            android:text="@string/zero_placeholder"
            android:textSize="26sp"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/used_grey"
            app:layout_constraintStart_toStartOf="@id/tvUsed"
            app:layout_constraintEnd_toEndOf="@id/tvUsed"
            app:layout_constraintTop_toBottomOf="@id/tvUsed"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:id="@+id/tvVal2"
            android:fontFamily="@font/montserrat"
            android:text="@string/zero_placeholder"
            android:textSize="26sp"
            android:textColor="@color/colorPrimaryLogin"
            app:layout_constraintTop_toBottomOf="@id/tvUnused"
            app:layout_constraintStart_toStartOf="@id/tvUnused"
            app:layout_constraintEnd_toEndOf="@id/tvUnused"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:id="@+id/tvVal3"
            android:fontFamily="@font/montserrat"
            android:text="@string/zero_placeholder"
            android:textSize="26sp"
            android:textColor="@color/colorPrimaryLogin"
            app:layout_constraintTop_toBottomOf="@id/tvLevel"
            app:layout_constraintStart_toStartOf="@id/tvLevel"
            app:layout_constraintEnd_toEndOf="@id/tvLevel"
            android:layout_height="wrap_content" />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            app:lottie_rawRes="@raw/welcome"
            app:lottie_autoPlay="true"
            app:lottie_scale=".5"
            app:lottie_repeatCount="3"
            android:id="@+id/lavLoyalty"
            app:lottie_loop="true"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="wrap_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clPoints">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:padding="12dp"
            android:gravity="center"
            android:visibility="gone"
            android:fontFamily="@font/montserrat"
            android:text="@string/news_content"
            android:layout_height="wrap_content" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:id="@+id/rvNews"
            app:stackFromEnd="true"
            android:layout_height="match_parent" />
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>