<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="org.triniti.greensmart.ui.auth.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        tools:context=".ui.auth.fragments.Signin">

        <FrameLayout
            android:id="@+id/flGradient"
            android:layout_width="match_parent"
            android:background="@drawable/login_anim_list"
            android:layout_height="match_parent"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@color/colorTransparent"
            app:layout_constraintHeight_percent=".4"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="0dp">

            <com.github.abdularis.civ.CircleImageView
                app:strokeWidth="2dp"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                app:strokeColor="@android:color/white"
                android:layout_width="120dp"
                android:id="@+id/ivLogo"
                android:src="@mipmap/ic_launcher"
                android:layout_height="120dp" />
        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:padding="20dp"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/tilEmail"
                android:hint="@string/email"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias=".45"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="40dp"
                style="@style/TextInputs"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="textEmailAddress"
                    android:id="@+id/etEmail"
                    android:text="@={viewModel.email}"
                    android:layout_height="match_parent" />

                <requestFocus/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@id/tilEmail"
                android:id="@+id/tilPassword"
                android:hint="@string/password"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="12dp"
                style="@style/TextInputs"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/etPassword"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password}"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:id="@+id/tvDummy"
                app:layout_constraintTop_toBottomOf="@id/tilPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:id="@+id/butLogin"
                app:layout_constraintTop_toBottomOf="@id/tvDummy"
                style="@style/MaterialButtons"
                android:padding="15dp"
                android:text="@string/login"
                android:layout_marginTop="40dp"
                android:onClick="@{viewModel::onLoginButtonClicked}"
                android:layout_height="wrap_content" />

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="match_parent"
                android:id="@+id/lavAuthenticate"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                android:visibility="gone"
                app:lottie_scale=".5"
                app:lottie_rawRes="@raw/loader"
                app:layout_constraintTop_toTopOf="@id/butLogin"
                app:layout_constraintBottom_toBottomOf="@id/butLogin"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSignup"
                android:padding="8dp"
                android:autoLink="web"
                android:layout_width="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/butLogin"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/create_account"
                android:layout_height="wrap_content" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>